package edu.fiuba.algo3.entrega_1.Palo;

public interface Palo {
    public boolean compararPalo(Palo otroPalo);
}
