package edu.fiuba.algo3.entrega_1.Valor;

public class Cinco extends Valor{

    public Cinco(){
        this.valor = 5;
    }

}
