package edu.fiuba.algo3.entrega_1.Valor;

public class Diez extends Valor{
    public Diez(){
        this.valor = 10;
    }
}
