package edu.fiuba.algo3.entrega_1.Valor;

public class Jota extends Valor{
    public Jota(){
        this.valor = 12;
    }
}
