package edu.fiuba.algo3.entrega_1.Valor;

public class Nueve extends Valor{
    public Nueve(){
        this.valor = 9;
    }
}
