package edu.fiuba.algo3.entrega_1.Valor;

public class Ocho extends Valor{
    public Ocho(){
        this.valor = 8;
    }
}
