package edu.fiuba.algo3.entrega_1.Valor;

public class Seis extends Valor{
    public Seis(){
        this.valor = 6;
    }
}
