package edu.fiuba.algo3.entrega_1.Valor;

public class Siete extends Valor{
    public Siete(){
        this.valor = 7;
    }
}
